// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Settings.vue > Should load the settings page 1`] = `
"<div class="v-container v-container--fluid v-locale--is-ltr">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated pa-4">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-slide-group v-tabs v-tabs--horizontal v-tabs--align-tabs-start v-tabs--density-default mb-2" tabindex="0" role="tablist">
      <!---->
      <div class="v-slide-group__container">
        <div class="v-slide-group__content"><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" value="workspace"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator="">Workspace<div class="v-tab__slider"></div></span>
            <!---->
            <!---->
          </button><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" value="billing"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator="">Billing<div class="v-tab__slider"></div></span>
            <!---->
            <!---->
          </button><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" value="account"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator="">Account<div class="v-tab__slider"></div></span>
            <!---->
            <!---->
          </button></div>
      </div>
      <!---->
    </div>
    <!---->
    <div class="v-window v-theme--light v-tabs-window">
      <div class="v-window__container">
        <transition-stub appear="false" persisted="false" css="true" disabled="true">
          <div class="v-window-item v-tabs-window-item" style="display: none;">
            <!---->
          </div>
        </transition-stub>
        <transition-stub appear="false" persisted="false" css="true" disabled="true">
          <div class="v-window-item v-tabs-window-item" style="display: none;">
            <!---->
          </div>
        </transition-stub>
        <transition-stub appear="false" persisted="false" css="true" disabled="true">
          <div class="v-window-item v-tabs-window-item" style="display: none;">
            <!---->
          </div>
        </transition-stub>
        <!---->
      </div>
      <!---->
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;

exports[`Settings.vue > Should not display the Billing tab if stripe is disabled 1`] = `
"<div class="v-container v-container--fluid v-locale--is-ltr">
  <div class="v-card v-theme--light v-card--density-default v-card--variant-elevated pa-4">
    <!---->
    <div class="v-card__loader">
      <div class="v-progress-linear v-theme--light v-locale--is-ltr" style="top: 0px; height: 0px; --v-progress-linear-height: 2px;" role="progressbar" aria-hidden="true" aria-valuemin="0" aria-valuemax="100">
        <!---->
        <div class="v-progress-linear__background"></div>
        <div class="v-progress-linear__buffer" style="width: 0%;"></div>
        <transition-stub name="fade-transition" appear="false" persisted="false" css="true">
          <div class="v-progress-linear__indeterminate">
            <div class="v-progress-linear__indeterminate long"></div>
            <div class="v-progress-linear__indeterminate short"></div>
          </div>
        </transition-stub>
        <!---->
      </div>
    </div>
    <!---->
    <!---->
    <div class="v-slide-group v-tabs v-tabs--horizontal v-tabs--align-tabs-start v-tabs--density-default mb-2" tabindex="0" role="tablist">
      <!---->
      <div class="v-slide-group__container">
        <div class="v-slide-group__content"><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" value="workspace"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator="">Workspace<div class="v-tab__slider"></div></span>
            <!---->
            <!---->
          </button>
          <!--v-if--><button type="button" class="v-btn v-theme--light v-btn--density-default v-btn--size-default v-btn--variant-text v-tab text-medium-emphasis" tabindex="-1" role="tab" aria-selected="false" value="account"><span class="v-btn__overlay"></span><span class="v-btn__underlay"></span>
            <!----><span class="v-btn__content" data-no-activator="">Account<div class="v-tab__slider"></div></span>
            <!---->
            <!---->
          </button>
        </div>
      </div>
      <!---->
    </div>
    <!---->
    <div class="v-window v-theme--light v-tabs-window">
      <div class="v-window__container">
        <transition-stub appear="false" persisted="false" css="true" disabled="true">
          <div class="v-window-item v-tabs-window-item" style="display: none;">
            <!---->
          </div>
        </transition-stub>
        <!--v-if-->
        <transition-stub appear="false" persisted="false" css="true" disabled="true">
          <div class="v-window-item v-tabs-window-item" style="display: none;">
            <!---->
          </div>
        </transition-stub>
        <!---->
      </div>
      <!---->
    </div>
    <!---->
    <!----><span class="v-card__underlay"></span>
  </div>
</div>"
`;
